relative link in home page

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -6,10 +6,10 @@
 <body>
 <h3>Sample rest API link : </h3>
 <ul>
-    <li><a href="http://localhost:8080/person/load/id/3">Get a entity Person without</a></li>
-    <li><a href="http://localhost:8080/person/load/deep/id/3">Get a entity Person with all relations</a></li>
-    <li><a href="http://localhost:8080/person/load/all">Load all person entities</a></li>
-    <li><a href="http://localhost:8080/person/load/name/Finwe">Get a entity Person by name</a></li>
+    <li><a href="person/load/id/3">Get a entity Person without</a></li>
+    <li><a href="person/load/deep/id/3">Get a entity Person with all relations</a></li>
+    <li><a href="person/load/all">Load all person entities</a></li>
+    <li><a href="person/load/name/Finwe">Get a entity Person by name</a></li>
 </ul>
 </body>
 </html>
